--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
 	"dependencies": {
 		"axios": "^1.4.0",
 		"modern-normalize": "^1.1.0",
+		"moment": "^2.29.4",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-loader-spinner": "^5.3.4",
 		"react-router-dom": "^6.11.1",
 		"sass": "^1.62.0",
 		"styled-components": "^5.3.9"
